Fix an issue where the slider was resetting back to default whenever used on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 .btns button:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .btns .active {
